# statsmodels

./: .bzrignore  .codacy.yml  .codecov.yml  .coveragerc  .coveragerc_cython  .dropbox  .flake8  .gitattributes  .gitignore  .mailmap  .pep8speaks.yml  .travis.miniconda.yml  .travis.yml  .travis_coveragerc  201  BackwardElimination.py  Bartlett-Sphericity.py  CHANGES.md  CHANGES.txt  CITATION.cff  CONTRIBUTING.rst  COPYRIGHTS.txt  INSTALL  INSTALL.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  README.txt  README_l1.txt  THANKS  TODO  TODO.txt  TODO_ian.txt  Weibull_AS.py  Weibull_AS_cytools.pyx  __init__.py  appveyor.yml  (+34 more)
statsmodels/: LICENSE.txt  TODO.txt  __init__.py  _version.py  api.py  conftest.py  enet_binomial.csv  enet_poisson.csv  info.py  meson.build  pull  setup.py  version.py
statsmodels/Weibull_AS/: Weibull_AS.pyx  setup_weibull.py
statsmodels/Weibull_AS_Survival/: Weibull_AS.py  setup_weibull.py
statsmodels/_build/: git_version.py  tempita.py
statsmodels/anova/: anova.py
statsmodels/base/: _constraints.py  _mixed.py  _parameter_inference.py  _penalized.py  _penalties.py  _plots.py  _prediction_inference.py  _screening.py  _segmented.py  covtype.py  data.py  dimensions.py  distributed_estimation.py  elastic_net.py  initialization.py  l1_cvxopt.py  l1_slsqp.py  l1_solvers_common.py  model.py  optimizer.py  penalties.py  regularized_covariance.py  solution_path.py  test_distributed_estimation.py  test_distributedv2.py  transform.py  wrapper.py
statsmodels/causal/: ivcontrol_function.py
statsmodels/compat/: __init__.py  _scipy_multivariate_t.py  collections.py  counter.py  iter_compat.py  matplotlib.py  np_compat.py  numpy.py  ordereddict.py  pandas.py  patsy.py  platform.py  pytest.py  python.py  scipy.py  sparse.py  testing.py
statsmodels/compatnp/: __init__.py  collections.py  counter.py  iter_compat.py  np_compat.py  ordereddict.py  py3k.py  scipy_compat.py  sparse.py
statsmodels/composition/: __init__.py  _composition.py
statsmodels/compositional/: _composition.py  api.py
statsmodels/datasets/: COPYING  __init__.py  template_data.py  tmp.py  utils.py
statsmodels/datasplit/: README.md  datasplitter.py  testcases.py
statsmodels/discrete/: L1.py  R_results_mxlogit.txt  _count_tsa.py  _diagnostics_count.py  api.py  conditional_models.py  count_model.py  dcm_base.py  dcm_clogit.py  dcm_clogit_examples.py  dcm_mixlogit.py  dcm_mxlogit.py  diagnostic.py  discrete_margins.py  discrete_model.py  discrete_panel.py  example_mxlogit.py  halton_sequence.py  l1.py  l1_cvxopt.py  l1_nm.py  l1_slsqp.py  l1_solvers_common.py  lasso.py  truncated_model.py
statsmodels/distributions/: __init__.py  _hermite.py  bernstein.py  copula.py  discrete.py  edgeworth.py  empirical_distribution.py  joint_distribution.py  mixture_rvs.py  quantiles_estimation.py  tools.py  transforms_copula.py
statsmodels/doe/: latin.py  lhs.py
statsmodels/duration/: __init__.py  _kernel_estimates.py  _prediction.py  api.py  hazard_regression.py  kernel_estimates.py  parametric.py  survfunc.py
statsmodels/el/: __init__.py  api.py  el.py
statsmodels/emplike/: __init__.py  aft_el.py  api.py  descriptive.py  elanova.py  elregress.py  heartdata.csv  koul_and_mc.py  originregress.py
statsmodels/examples/: __init__.py  es_misc_poisson2.py  ex_arch_canada.py  ex_binom_blaker.py  ex_coint_johansen.py  ex_emplike_1.py  ex_emplike_2.py  ex_emplike_3.py  ex_feasible_gls_het.py  ex_feasible_gls_het_0.py  ex_generic_mle.py  ex_generic_mle_t.py  ex_generic_mle_tdist.py  ex_grangercausality.py  ex_inter_rater.py  ex_kde_confint.py  ex_kde_functions.py  ex_kde_normalreference.py  ex_kernel_regression.py  ex_kernel_regression2.py  ex_kernel_regression3.py  ex_kernel_regression_censored1.py  ex_kernel_regression_censored2.py  ex_kernel_regression_dgp.py  ex_kernel_regression_sigtest.py  ex_kernel_semilinear_dgp.py  ex_kernel_singleindex_dgp.py  ex_kernel_test_functional.py  ex_kernel_test_functional_li_wang.py  ex_lowess.py  ex_ltl_poisson.py  ex_lts.py  ex_lts2.py  ex_lts3_0.py  ex_misc_nonlinearls_linear.py  ex_misc_nonlinearls_linear_div.py  ex_misc_tarma.py  ex_misc_tmodel.py  ex_multivar_UKDE.py  ex_multivar_kde.py  (+53 more)
statsmodels/formula/: TODO  __init__.py  _manager.py  anova.py  api.py  eval.py  example_interactions.py  example_tests.py  formulatools.py  parser.py  plotting.py  try_formula.py
statsmodels/gam/: api.py  gam.py  gam_penalties.py  generalized_additive_model.py  smooth_basis.py
statsmodels/genmod/: _genmod_plots.py  _prediction.py  _tweedie_compound_poisson.py  api.py  bayes_mixed_glm.py  cov_struct.py  generalized_estimating_equations.py  generalized_linear_model.py  qif.py
statsmodels/graphics/: _probscale.py  _regressionplots_doc.py  agreement.py  api.py  bland_altman.py  boxplots.py  correlation.py  dotplot.py  dotplots.py  facetplot.py  factor_plots.py  factorplots.py  functional.py  gofplots.py  mosaicplot.py  plot_grids.py  plottools.py  regressionplots.py  test_facetplot.py  tsaplots.py  tukeyplot.py  utils.py
statsmodels/imputation/: bayes_mi.py  mice.py  ros.py
statsmodels/includes/: _complex_shim.h  math.pxd  meson.build
statsmodels/iolib/: __init__.py  api.py  asciitable.py  decorations.py  foreign.py  notes_table_update.txt  openfile.py  pickle.py  smpickle.py  stata_summary_examples.py  statareader.pyx  summary.py  summary2.py  summary_multi.py  summary_old.py  table.py  tableformatting.py
statsmodels/kernel_methods/: __init__.py  _cy_fast_linbin.pyx  _cy_grid_interpolation.pyx  _cy_kernels.pyx  _fast_linbin.py  _grid.py  _grid_interpolation.py  _kde1d_cyclic.py  _kde1d_linear_combination.py  _kde1d_methods.py  _kde1d_reflection.py  _kde1d_renormalization.py  _kde1d_transform.py  _kde_methods.py  _kde_multivariate.py  _kde_utils.py  _kdenc_methods.py  _kdend_methods.py  _kernels.py  _kernels1d.py  _kernelsnc.py  _kernelsnd.py  api.py  bandwidths.py  bootstrap.py  bw_crossvalidation.py  erf.h  fast_linbin.py  grid.py  grid_interp.h  grid_interp.pxd  kde.py  kde_1d.py  kde_methods.py  kde_multivariate.py  kde_nc.py  kde_nd.py  (+11 more)
(+3450 files in other folders)
